indus/test/test_examples/type_errors/list_index.tpc
tele bool x;
init {
    bool y = x[1];
}
telemetry {}
check {}